--- a/GameNotifier/GetVenueDetails.xaml
+++ b/GameNotifier/GetVenueDetails.xaml
@@ -4,11 +4,12 @@
     <x:Property Name="argVenueZip" Type="OutArgument(x:String)" />
     <x:Property Name="argVenueAddress" Type="OutArgument(x:String)" />
     <x:Property Name="argGmapLink" Type="OutArgument(x:String)" />
+    <x:Property Name="argboolVenue" Type="OutArgument(x:Boolean)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>578,1135</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>770,1383</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetVenueDetails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -60,7 +61,7 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="538,1055" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="730,1303" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="dtVenue" />
     </Sequence.Variables>
@@ -69,28 +70,28 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[dtVenue]" DisplayName="Read Range from VenueDetails.xlsx" sap:VirtualizedContainerService.HintSize="516,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="[environment.CurrentDirectory+&quot;\Input\VenueDetails.xlsx&quot;]" />
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="516,804" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[dtVenue]" DisplayName="Read Range from VenueDetails.xlsx" sap:VirtualizedContainerService.HintSize="708,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="[environment.CurrentDirectory+&quot;\Input\VenueDetails.xlsx&quot;]" />
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="708,1052" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="sd:DataRow" Name="row" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="486,656" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="678,904" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" sap:VirtualizedContainerService.HintSize="464,532" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" DisplayName="If ground name exists in venues.xlsx" sap:VirtualizedContainerService.HintSize="656,780" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
-                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="264,384" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="531,632" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_1">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argVenueZip]</OutArgument>
                     </Assign.To>
@@ -98,7 +99,7 @@
                       <InArgument x:TypeArguments="x:String">[row("zip").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_2">
+                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_2">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argVenueAddress]</OutArgument>
                     </Assign.To>
@@ -106,7 +107,7 @@
                       <InArgument x:TypeArguments="x:String">[row("Address").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_3">
+                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_3">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argGmapLink]</OutArgument>
                     </Assign.To>
@@ -114,6 +115,28 @@
                       <InArgument x:TypeArguments="x:String">[row("Google map link").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
+                  <If Condition="[argVenueZip.Equals(&quot;&quot;) or argVenueAddress.Equals(&quot;&quot;)]" DisplayName="If zip and address is empty" sap:VirtualizedContainerService.HintSize="509,208" sap2010:WorkflowViewState.IdRef="If_2">
+                    <If.Then>
+                      <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_4">
+                        <Assign.To>
+                          <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
+                        </Assign.To>
+                        <Assign.Value>
+                          <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                        </Assign.Value>
+                      </Assign>
+                    </If.Then>
+                    <If.Else>
+                      <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_5">
+                        <Assign.To>
+                          <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
+                        </Assign.To>
+                        <Assign.Value>
+                          <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                        </Assign.Value>
+                      </Assign>
+                    </If.Else>
+                  </If>
                 </Sequence>
               </If.Then>
             </If>
