--- a/SportsInviter/GoogleCalendarInvite.xaml
+++ b/SportsInviter/GoogleCalendarInvite.xaml
@@ -9,11 +9,12 @@
     <x:Property Name="argGoogleAPIKey" Type="InArgument(x:String)" />
     <x:Property Name="argGoogleClientID" Type="InArgument(x:String)" />
     <x:Property Name="argGoogleClientSecret" Type="InArgument(x:String)" />
+    <x:Property Name="argEventID" Type="OutArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>691,1191</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>691,1092</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GoogleCalendarInvite_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -41,7 +42,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="16">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="32">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -58,31 +59,32 @@
       <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
+      <AssemblyReference>System.ServiceModel</AssemblyReference>
+      <AssemblyReference>UiPath.Excel</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GoogleCalendarInvite" sap:VirtualizedContainerService.HintSize="651,1111" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GoogleCalendarInvite" sap:VirtualizedContainerService.HintSize="651,1012" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <uga:GSuiteApplicationScope KeyPath="{x:Null}" Password="{x:Null}" ServiceAccountEmail="{x:Null}" UserEmail="{x:Null}" ApiKey="[argGoogleAPIKey]" AuthenticationType="OAuthClientID" CredentialID="[argGoogleClientID]" CredentialSecret="[argGoogleClientSecret]" DisplayName="GSuite Application Scope" HasDomainWideAccesss="False" sap:VirtualizedContainerService.HintSize="629,987" sap2010:WorkflowViewState.IdRef="GSuiteApplicationScope_1" KeyType="JSON" Services="Calendar">
+    <uga:GSuiteApplicationScope KeyPath="{x:Null}" Password="{x:Null}" ServiceAccountEmail="{x:Null}" UserEmail="{x:Null}" ApiKey="[argGoogleAPIKey]" AuthenticationType="OAuthClientID" CredentialID="[argGoogleClientID]" CredentialSecret="[argGoogleClientSecret]" DisplayName="GSuite Application Scope" HasDomainWideAccesss="False" sap:VirtualizedContainerService.HintSize="629,888" sap2010:WorkflowViewState.IdRef="GSuiteApplicationScope_1" KeyType="JSON" Services="Calendar">
       <uga:GSuiteApplicationScope.Body>
         <ActivityAction x:TypeArguments="ug:SimpleObjectContainer">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ug:SimpleObjectContainer" Name="GSuiteScope" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="615,901" sap2010:WorkflowViewState.IdRef="Sequence_2">
-            <Sequence.Variables>
-              <Variable x:TypeArguments="x:String" Name="iEventID" />
-            </Sequence.Variables>
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="615,802" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <uga:CreateEvent CalendarId="{x:Null}" EventUrl="{x:Null}" RecurringRule="{x:Null}" TimeZone="{x:Null}" AttendeeList="[argAttendees]" Description="[argEventDetails]" DisplayName="Create Event" EndTime="[argEndDateTime]" EventId="[iEventID]" sap:VirtualizedContainerService.HintSize="593,207" sap2010:WorkflowViewState.IdRef="CreateEvent_1" Location="[argLocation]" SendUpdates="ALL" StartTime="[argStartDateTime]" Status="CONFIRMED" Title="[argEventTitle]" Visibility="DEFAULT" />
-            <If Condition="[iEventID.Equals(&quot;&quot;)]" DisplayName="If calendar invite sent" sap:VirtualizedContainerService.HintSize="593,431" sap2010:WorkflowViewState.IdRef="If_1">
+            <uga:CreateEvent CalendarId="{x:Null}" EventUrl="{x:Null}" RecurringRule="{x:Null}" TimeZone="{x:Null}" AttendeeList="[argAttendees]" Description="[argEventDetails]" DisplayName="Create Event" EndTime="[argEndDateTime]" EventId="[argEventID]" sap:VirtualizedContainerService.HintSize="593,207" sap2010:WorkflowViewState.IdRef="CreateEvent_1" Location="[argLocation]" SendUpdates="ALL" StartTime="[argStartDateTime]" Status="CONFIRMED" Title="[argEventTitle]" Visibility="DEFAULT" />
+            <If Condition="[argEventID.Equals(&quot;&quot;)]" DisplayName="If calendar invite sent" sap:VirtualizedContainerService.HintSize="593,431" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
                 <Sequence sap:VirtualizedContainerService.HintSize="336,284" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
@@ -105,7 +107,6 @@
                 </Sequence>
               </If.Else>
             </If>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" Buttons="Ok" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="593,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Invite sent!&quot;]" TopMost="True" />
           </Sequence>
         </ActivityAction>
       </uga:GSuiteApplicationScope.Body>
