--- a/SportsInviter/WeatherAPI.xaml
+++ b/SportsInviter/WeatherAPI.xaml
@@ -9,7 +9,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>882,1363</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>976,1363</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="25">
@@ -66,7 +66,7 @@
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Get Weather details from Open weather map api" sap:VirtualizedContainerService.HintSize="842,1283" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Get Weather details from Open weather map api" sap:VirtualizedContainerService.HintSize="936,1283" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strXML" />
       <Variable x:TypeArguments="x:String" Name="strXMLFilePath" />
@@ -97,7 +97,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="XML" BodyFormat="application/xml" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request for Open Weather Map API" EndPoint="[strWeatherAPIEndpoint]" sap:VirtualizedContainerService.HintSize="820,22" sap2010:WorkflowViewState.IdRef="HttpClient_2" Method="GET" Result="[strXML]" StatusCode="[iStatusCode]" TimeoutMS="6000">
+    <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="XML" BodyFormat="application/xml" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request for Open Weather Map API" EndPoint="[strWeatherAPIEndpoint]" sap:VirtualizedContainerService.HintSize="914,22" sap2010:WorkflowViewState.IdRef="HttpClient_2" Method="GET" Result="[strXML]" StatusCode="[iStatusCode]" TimeoutMS="6000">
       <ui:HttpClient.Attachments>
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.Attachments>
@@ -116,8 +116,8 @@
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.UrlSegments>
     </ui:HttpClient>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="820,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Weather status code : &quot; +iStatusCode.ToString]" />
-    <If Condition="[iStatusCode =200 and strXML.Length&gt;0]" DisplayName="If status is 200" sap:VirtualizedContainerService.HintSize="820,996" sap2010:WorkflowViewState.IdRef="If_7">
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="914,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Weather status code : &quot; +iStatusCode.ToString]" />
+    <If Condition="[iStatusCode =200 and strXML.Length&gt;0]" DisplayName="If status is 200" sap:VirtualizedContainerService.HintSize="914,996" sap2010:WorkflowViewState.IdRef="If_7">
       <If.Then>
         <Sequence sap:VirtualizedContainerService.HintSize="553,848" sap2010:WorkflowViewState.IdRef="Sequence_13">
           <sap:WorkflowViewStateService.ViewState>
@@ -595,14 +595,22 @@
         </Sequence>
       </If.Then>
       <If.Else>
-        <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_44">
-          <Assign.To>
-            <OutArgument x:TypeArguments="x:String">[argWeatherCondition]</OutArgument>
-          </Assign.To>
-          <Assign.Value>
-            <InArgument x:TypeArguments="x:String">["Sorry, Weather Information was not provided for the given zip:"+argVenueZIp]</InArgument>
-          </Assign.Value>
-        </Assign>
+        <Sequence sap:VirtualizedContainerService.HintSize="336,315" sap2010:WorkflowViewState.IdRef="Sequence_14">
+          <sap:WorkflowViewStateService.ViewState>
+            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+            </scg:Dictionary>
+          </sap:WorkflowViewStateService.ViewState>
+          <Assign sap:VirtualizedContainerService.HintSize="314,60" sap2010:WorkflowViewState.IdRef="Assign_44">
+            <Assign.To>
+              <OutArgument x:TypeArguments="x:String">[argWeatherCondition]</OutArgument>
+            </Assign.To>
+            <Assign.Value>
+              <InArgument x:TypeArguments="x:String">["Sorry, Weather Information was not provided for the given zip:"+argVenueZIp]</InArgument>
+            </Assign.Value>
+          </Assign>
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="314,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Sorry, Weather Information was not provided for the given zip:&quot;+argVenueZIp]" />
+        </Sequence>
       </If.Else>
     </If>
   </Sequence>
